--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       text-align: center;
       background-color: #333; /* Fallback color */
       
-      position: relative; /* New: Position body relative to anchor the pseudo-element */
+      position: relative; /* Position body relative to anchor the pseudo-element */
     }
 
     /* CRITICAL FIX: The Pseudo-element for Fixed Background */
@@ -64,7 +64,7 @@
       margin-bottom: 20px; /* Spacing between sections */
     }
     
-    /* Content Wrapper: Adds dark overlay for text readability */
+    /* Content Wrapper: Adds dark overlay for text readability (consistent for all sections) */
     .content-wrapper {
         background: rgba(0, 0, 0, 0.6); /* Semi-transparent black overlay */
         padding: 40px 20px; 
@@ -177,37 +177,27 @@
       color: #ffddaa;
       font-style: italic;
     }
-    /* Responsive image for mood board and entourage list */
-    .moodboard-item img, .video-box img {
-      max-width: 100%;
-      height: auto;
-    }
 
-    /* Mood Board Specific Styling (No dark overlay) */
-    #moodboard h2 {
-      padding-top: 40px; /* Maintain top padding for the heading */
-    }
-    #moodboard .divider {
-      margin-top: 15px; /* Adjust divider margin */
-      margin-bottom: 25px;
-    }
+    /* Mood Board Styling (Simplified back to standard) */
     .moodboard-container {
-      max-width: 1000px;
+      /* Keep centering and max-width for the content inside the wrapper */
+      max-width: 960px; /* Slightly smaller to fit inside content-wrapper */
       margin: 0 auto;
-      padding-bottom: 40px; /* Maintain bottom padding for the section */
-      /* NEW: Added display flex to ensure images are side by side and responsive */
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 20px; /* Space between moodboard items */
+      gap: 20px;
     }
     .moodboard-item {
-        flex: 1 1 45%; /* Allows items to take up half width, wrapping on smaller screens */
-        max-width: 480px; /* Max width for each moodboard item */
-        margin-bottom: 0; /* No extra margin for items themselves */
-        padding: 10px; /* Slight padding if needed, or remove */
+        flex: 1 1 100%; /* Default to full width for better image scaling */
+        max-width: 100%;
+        margin-bottom: 0;
     }
-    /* Adjusted to avoid an extra paragraph for "Mood Board" as the image has text */
+    .moodboard-item img {
+        max-width: 100%;
+        height: auto;
+    }
+    /* Remove the image's accompanying paragraph */
     .moodboard-item p { 
         display: none; 
     }
@@ -227,17 +217,13 @@
         .video-box {
             max-width: 100%;
         }
-        /* Moodboard specific mobile adjustments */
+        /* Moodboard specific mobile adjustments (less necessary now, but good to keep) */
         #moodboard h2 {
-            padding-top: 30px; /* Smaller top padding on mobile */
+            padding-top: 0;
         }
         .moodboard-container {
-            padding-bottom: 30px; /* Smaller bottom padding on mobile */
+            padding-bottom: 0;
             gap: 15px;
-        }
-        .moodboard-item {
-            flex: 1 1 100%; /* Stack moodboard items on small screens */
-            max-width: 100%;
         }
     }
   </style>
@@ -252,6 +238,9 @@
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
+      <a href="#registry">Registry</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
@@ -286,11 +275,13 @@
   </section>
 
   <section id="moodboard">
-    <h2>Mood Board & Color Motifs</h2>
-    <div class="divider"></div>
-    <div class="moodboard-container">
-      <div class="moodboard-item">
-        <img src="Mood Board Finaal.png" alt="Mood Board">
+    <div class="content-wrapper">
+        <h2>Mood Board & Color Motifs</h2>
+        <div class="divider"></div>
+        <div class="moodboard-container">
+          <div class="moodboard-item">
+            <img src="Mood Board Finaal.png" alt="Mood Board">
+          </div>
         </div>
     </div>
   </section>
