--- a/index.html
+++ b/index.html
@@ -178,10 +178,9 @@
       font-style: italic;
     }
 
-    /* Mood Board Styling (Simplified back to standard) */
+    /* Mood Board Styling */
     .moodboard-container {
-      /* Keep centering and max-width for the content inside the wrapper */
-      max-width: 960px; /* Slightly smaller to fit inside content-wrapper */
+      max-width: 960px;
       margin: 0 auto;
       display: flex;
       flex-wrap: wrap;
@@ -197,7 +196,7 @@
         max-width: 100%;
         height: auto;
     }
-    /* Remove the image's accompanying paragraph */
+    /* Remove the image's accompanying paragraph if present */
     .moodboard-item p { 
         display: none; 
     }
@@ -216,14 +215,6 @@
         }
         .video-box {
             max-width: 100%;
-        }
-        /* Moodboard specific mobile adjustments (less necessary now, but good to keep) */
-        #moodboard h2 {
-            padding-top: 0;
-        }
-        .moodboard-container {
-            padding-bottom: 0;
-            gap: 15px;
         }
     }
   </style>
