--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       text-align: center;
       background-color: #333; /* Fallback color */
       
-      position: relative; /* Position body relative to anchor the pseudo-element */
+      /* New: Position body relative to anchor the pseudo-element */
+      position: relative; 
     }
 
     /* CRITICAL FIX: The Pseudo-element for Fixed Background */
@@ -64,7 +65,7 @@
       margin-bottom: 20px; /* Spacing between sections */
     }
     
-    /* Content Wrapper: Adds dark overlay for text readability (consistent for all sections) */
+    /* Content Wrapper: Adds dark overlay for text readability */
     .content-wrapper {
         background: rgba(0, 0, 0, 0.6); /* Semi-transparent black overlay */
         padding: 40px 20px; 
@@ -177,31 +178,11 @@
       color: #ffddaa;
       font-style: italic;
     }
-
-    /* Mood Board Styling */
-    .moodboard-container {
-      max-width: 960px;
-      margin: 0 auto;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
+    /* Responsive image for mood board and entourage list */
+    .moodboard-item img, .video-box img {
+      max-width: 100%;
+      height: auto;
     }
-    .moodboard-item {
-        flex: 1 1 100%; /* Default to full width for better image scaling */
-        max-width: 100%;
-        margin-bottom: 0;
-    }
-    .moodboard-item img {
-        max-width: 100%;
-        height: auto;
-    }
-    /* Remove the image's accompanying paragraph if present */
-    .moodboard-item p { 
-        display: none; 
-    }
-
-
     /* Media query for mobile */
     @media (max-width: 768px) {
         h1 {
@@ -229,9 +210,6 @@
       <a href="#rsvp">RSVP</a>
       <a href="#savethedate">Save the Date</a>
       <a href="#location">Location</a>
-      <a href="#registry">Registry</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#faq">FAQ</a>
     </nav>
   </header>
 
